--- a/src/example_data/README
+++ b/src/example_data/README
@@ -5,6 +5,8 @@ This directory contains example CSV files that serve as templates for the minimu
 ## Files
 
 - `biosample_creation_required_info.csv`: This file contains the basic template for the REQUIRED columns needed when generating new Biosample IDs.
+- `quantity_value.csv`: This file contains the fields that are included in QuanityValue type slots. Examples of this slot include air_temp, samp_size, and phosphate. There are no required fields for this value type. This csv includes all available options for this slot type, but they can be included/excluded as needed. The important aspect in this example is the dot notation for included QuanityValue fields.
+- `enum_slot_example`: This file contains an example of Enum type slots. These are not complicated slots (note they still have 'biosample.' notation), but the values MUST be one of the permissible values as [defined in the NMDC Schema](https://microbiomedata.github.io/nmdc-schema/).
 - `config_example.toml`: This file is used to demonstrate the format of a toml file that holds credentials. The credential variables must follow the nomenclature in this file. If using `env` variables, the contents of the file will be same.
 
 ## Usage
